# rocket-protocol-lib

./: .clang-format  .gitignore  CMakeLists.txt
include/rp/: protocol.h
include/rp/cobs/: cobs.h
include/rp/crc/: crc.h
include/srp/: protocol.h
include/srp/crc/: crc.h
proto/tvr/: command.proto
src/: CMakeLists.txt  codec.c  protocol.c
src/cobs/: CMakeLists.txt  cobs.c
src/crc/: CMakeLists.txt  crc16.c
tests/unit/: CMakeLists.txt
tests/unit/cobs/: test_cobs_encode_decode.c
tests/unit/crc/: test_crc16.c
